fix: testimonial jumping bug

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,13 +1,17 @@
 @tailwind base;
 @tailwind components;
-.fade-enter-active,	
-.fade-leave-active {
-  @apply transition-all overflow-hidden visible absolute w-full;	
+/* Enter and leave animations can use different */
+/* durations and timing functions.              */
+.slide-fade-enter-active {
+  transition: all .3s ease;
 }
-
-.fade-enter,	
-.fade-leave-to {	
-  @apply hidden w-full opacity-0;	
+.slide-fade-leave-active {
+  transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.slide-fade-enter, .slide-fade-leave-to
+/* .slide-fade-leave-active below version 2.1.8 */ {
+  transform: translateX(10px);
+  opacity: 0;
 }
 
 .heading-1 {
